ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /host
            pathType: Exact
            backend:
                service:
                  name: clusterip-service
                  port:
                    number: 8080
